z-index fix

--- a/styles.css
+++ b/styles.css
@@ -206,6 +206,7 @@ main {
 .rank-item.icon img {
     max-width: 100%;
     max-height: 100%;
+    z-index: -1000;
 }
 
 .rank-number {
